Update index.html to improve SEO with additional meta tags for description and Open Graph properties; change doctype declaration for consistency.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Psihoterapija Suzana Mojsilović</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
+    <meta
+      name="description"
+      content="Gestalt psihoterapija sa Suzanom Mojsilović - prostor podrške, razumevanja i ličnog razvoja. Online i uživo sesije."
+    />
+
+    <meta
+      property="og:title"
+      content="Suzana Mojsilović - Gestalt Psihoterapija"
+    />
+    <meta
+      property="og:description"
+      content="Gestalt psihoterapija sa Suzanom Mojsilović - prostor podrške, razumevanja i ličnog razvoja. Online i uživo sesije."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.tvoj-psihoterapeut.rs/" />
+    <meta property="og:image" content="/photos/psihoterapeut.jpg" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
