--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/photos/2.png" />
-    <link rel="apple-touch-icon" href="/src/photos/2.png" />
-    <link rel="shortcut icon" href="/src/photos/2.png" />
+    <link rel="icon" type="image/png" href="/photos/2.png" />
+    <link rel="apple-touch-icon" href="/photos/2.png" />
+    <link rel="shortcut icon" href="/photos/2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Psihoterapija Suzana Mojsilović</title>
 
