--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/photos/2.png" />
-    <link rel="apple-touch-icon" href="/photos/2.png" />
-    <link rel="shortcut icon" href="/photos/2.png" />
+    <link rel="icon" type="image/png" href="/photos/2.png?v=2" />
+    <link rel="apple-touch-icon" href="/photos/2.png?v=2" />
+    <link rel="shortcut icon" href="/photos/2.png?v=2" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/photos/2.png?v=2" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/photos/2.png?v=2" />
+    <meta name="msapplication-TileImage" content="/photos/2.png?v=2" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Psihoterapija Suzana Mojsilović</title>
 
