--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="/photos/2.png?v=2" />
     <link rel="icon" type="image/png" sizes="32x32" href="/photos/2.png?v=2" />
     <link rel="icon" type="image/png" sizes="16x16" href="/photos/2.png?v=2" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/photos/1.png?v=2" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/photos/1.png?v=2" />
     <meta name="msapplication-TileImage" content="/photos/2.png?v=2" />
     <meta name="msapplication-TileColor" content="#0d9488" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
