Refactor SEO-related meta tags across multiple files to ensure consistent terminology, replacing "terapeut" with "psihoterapeut" for clarity and accuracy. Update descriptions and keywords in index.html, manifest.json, App component, and SEO component.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <!-- Primary Meta Tags -->
     <title>Psihoterapija Novi Pazar - Suzana Mojsilović | Online i Uživo Sesije</title>
     <meta name="title" content="Psihoterapija Novi Pazar - Suzana Mojsilović | Online i Uživo Sesije" />
-    <meta name="description" content="Gestalt i Schema psihoterapija sa licenciranim terapeutom Suzana Mojsilović u Novom Pazaru. Online i uživo sesije. Anksioznost, depresija, stres, odnosi. Prva konsultacija besplatno." />
-    <meta name="keywords" content="psihoterapija, novi pazar, gestalt terapija, schema terapija, online psihoterapija, anksioznost, depresija, stres, psiholog, terapeut, srbija" />
+    <meta name="description" content="Gestalt i Schema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Novom Pazaru. Online i uživo sesije. Anksioznost, depresija, stres, odnosi. Prva konsultacija besplatno." />
+    <meta name="keywords" content="psihoterapija, novi pazar, gestalt terapija, schema terapija, online psihoterapija, anksioznost, depresija, stres, psiholog, psihoterapeut, srbija" />
     <meta name="author" content="Suzana Mojsilović" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="Serbian" />
@@ -40,7 +40,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.tvoj-psihoterapeut.rs/" />
     <meta property="og:title" content="Psihoterapija Novi Pazar - Suzana Mojsilović | Online i Uživo Sesije" />
-    <meta property="og:description" content="Gestalt i Schema psihoterapija sa licenciranim terapeutom Suzana Mojsilović u Novom Pazaru. Online i uživo sesije. Anksioznost, depresija, stres, odnosi." />
+    <meta property="og:description" content="Gestalt i Schema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Novom Pazaru. Online i uživo sesije. Anksioznost, depresija, stres, odnosi." />
     <meta property="og:image" content="https://www.tvoj-psihoterapeut.rs/photos/psihoterapeut.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -51,7 +51,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.tvoj-psihoterapeut.rs/" />
     <meta property="twitter:title" content="Psihoterapija Novi Pazar - Suzana Mojsilović | Online i Uživo Sesije" />
-    <meta property="twitter:description" content="Gestalt i Schema psihoterapija sa licenciranim terapeutom Suzana Mojsilović u Novom Pazaru. Online i uživo sesije." />
+    <meta property="twitter:description" content="Gestalt i Schema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Novom Pazaru. Online i uživo sesije." />
     <meta property="twitter:image" content="https://www.tvoj-psihoterapeut.rs/photos/psihoterapeut.jpg" />
     
     <!-- Additional SEO Meta Tags -->
