--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Primary Meta Tags -->
-    <title>Psihoterapija  - Suzana Mojsilović | Online i Uživo Sesije</title>
-    <meta name="title" content="Psihoterapija - Suzana Mojsilović | Online i Uživo Sesije" />
+    <title>Psihoterapija Suzana Mojsilović | Online i Uživo Sesije</title>
+    <meta name="title" content="Psihoterapija Suzana Mojsilović | Online i Uživo Sesije" />
     <meta name="description" content="Gestalt i Schema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Srbiji. Online i uživo sesije. Anksioznost, depresija, stres, odnosi. Prva konsultacija besplatno." />
     <meta name="keywords" content="psihoterapija, gestalt terapija, schema terapija, online psihoterapija, anksioznost, depresija, stres, psiholog, psihoterapeut, srbija" />
     <meta name="author" content="Suzana Mojsilović" />
@@ -39,7 +39,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.tvoj-psihoterapeut.rs/" />
-    <meta property="og:title" content="Psihoterapija  - Suzana Mojsilović | Online i Uživo Sesije" />
+    <meta property="og:title" content="Psihoterapija Suzana Mojsilović | Online i Uživo Sesije" />
     <meta property="og:description" content="Gestalt i Schema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Srbiji. Online i uživo sesije. Anksioznost, depresija, stres, odnosi." />
     <meta property="og:image" content="https://www.tvoj-psihoterapeut.rs/photos/psihoterapeut.jpg" />
     <meta property="og:image:width" content="1200" />
@@ -50,7 +50,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.tvoj-psihoterapeut.rs/" />
-    <meta property="twitter:title" content="Psihoterapija  - Suzana Mojsilović | Online i Uživo Sesije" />
+    <meta property="twitter:title" content="Psihoterapija Suzana Mojsilović | Online i Uživo Sesije" />
     <meta property="twitter:description" content="Gestalt i Schema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Srbiji. Online i uživo sesije." />
     <meta property="twitter:image" content="https://www.tvoj-psihoterapeut.rs/photos/psihoterapeut.jpg" />
     
