--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Primary Meta Tags -->
-    <title>Psihoterapija Suzana Mojsilović | Online i Uživo Sesije</title>
-    <meta name="title" content="Psihoterapija Suzana Mojsilović | Online i Uživo Sesije" />
-    <meta name="description" content="Gestalt i Schema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Srbiji. Online i uživo sesije. Anksioznost, depresija, stres, odnosi. Prva konsultacija besplatno." />
+    <title>Psihoterapija Suzana Mojsilović | Online i Uživo Seanse</title>
+    <meta name="title" content="Psihoterapija Suzana Mojsilović | Online i Uživo Seanse" />
+    <meta name="description" content="Gestalt i Schema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Srbiji. Online i uživo seanse. Anksioznost, depresija, stres, odnosi. Prva konsultacija besplatno." />
     <meta name="keywords" content="psihoterapija, gestalt terapija, schema terapija, online psihoterapija, anksioznost, depresija, stres, psiholog, psihoterapeut, srbija" />
     <meta name="author" content="Suzana Mojsilović" />
     <meta name="robots" content="index, follow" />
@@ -39,8 +39,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.tvoj-psihoterapeut.rs/" />
-    <meta property="og:title" content="Psihoterapija Suzana Mojsilović | Online i Uživo Sesije" />
-    <meta property="og:description" content="Gestalt i Schema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Srbiji. Online i uživo sesije. Anksioznost, depresija, stres, odnosi." />
+    <meta property="og:title" content="Psihoterapija Suzana Mojsilović | Online i Uživo Seanse" />
+    <meta property="og:description" content="Gestalt i Schema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Srbiji. Online i uživo seanse. Anksioznost, depresija, stres, odnosi." />
     <meta property="og:image" content="https://www.tvoj-psihoterapeut.rs/photos/psihoterapeut.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -50,8 +50,8 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.tvoj-psihoterapeut.rs/" />
-    <meta property="twitter:title" content="Psihoterapija Suzana Mojsilović | Online i Uživo Sesije" />
-    <meta property="twitter:description" content="Gestalt i Schema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Srbiji. Online i uživo sesije." />
+    <meta property="twitter:title" content="Psihoterapija Suzana Mojsilović | Online i Uživo Seanse" />
+    <meta property="twitter:description" content="Gestalt i Schema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Srbiji. Online i uživo seanse." />
     <meta property="twitter:image" content="https://www.tvoj-psihoterapeut.rs/photos/psihoterapeut.jpg" />
     
     <!-- Additional SEO Meta Tags -->
@@ -74,7 +74,7 @@
       "@type": "MedicalBusiness",
       "name": "Suzana Mojsilović - Gestalt Psihoterapija",
       "alternateName": "Tvoj Psihoterapeut",
-      "description": "Licencirani gestalt i schema psihoterapeut u Srbiji. Online i uživo sesije psihoterapije.",
+      "description": "Licencirani gestalt i schema psihoterapeut u Srbiji. Online i uživo seanse psihoterapije.",
       "url": "https://www.tvoj-psihoterapeut.rs",
       "telephone": "+381669000012",
       "email": "suza.psihoterapeut@gmail.com",
@@ -107,7 +107,7 @@
         {
           "@type": "MedicalService",
           "name": "Online Psihoterapija",
-          "description": "Online sesije psihoterapije putem video poziva"
+          "description": "Online seanse psihoterapije putem video poziva"
         }
       ],
       "hasOfferCatalog": {
@@ -119,7 +119,7 @@
             "itemOffered": {
               "@type": "Service",
               "name": "Individualna psihoterapija",
-              "description": "Individualne sesije gestalt i schema psihoterapije"
+              "description": "Individualne seanse gestalt i schema psihoterapije"
             }
           }
         ]
